--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
   <link rel="stylesheet" href="assets/css/telus-bootstrap.min.css" />
+ 
   <link rel="stylesheet" href="assets/css/telus-font.css" />
   <link rel="stylesheet" href="assets/css/riliwan-rabo.css" />
    <link rel="stylesheet" href="assets/css/app.css" />
