Added form data

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
   <link rel="stylesheet" href="assets/css/telus-bootstrap.min.css" />
  
-  <link rel="stylesheet" href="assets/css/telus-font.css" />
+  <link rel="stylesheet" href="assets/css/telus-fonts.css" />
   <link rel="stylesheet" href="assets/css/riliwan-rabo.css" />
    <link rel="stylesheet" href="assets/css/app.css" />
 </head>
