--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+  <!--<link rel="stylesheet" href="assets/css/font-awesome.min.css" />-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="assets/css/telus-bootstrap.min.css" />
  
   <link rel="stylesheet" href="assets/css/telus-fonts.css" />
   <link rel="stylesheet" href="assets/css/riliwan-rabo.css" />
    <link rel="stylesheet" href="assets/css/app.css" />
+
 </head>
 <body>
   <app-root>Loading...</app-root>
